<resources>
    <string name="app_name">PasswordManager</string>
    <string name="tv_email">Email</string>
    <string name="tv_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="desc_logo">Logo</string>
    <string name="tv_or">OR</string>
    <string name="tv_forgot">FORGOT PASSWORD?</string>
    <string name="tv_sign_up">NOT REGISTERED YET? SIGN UP NOW</string>
    <string name="create_account">Create account</string>
    <string name="tv_already_account">ALREADY HAVE AN ACCOUNT? SIGN IN</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="tv_back"><![CDATA[<< BACK]]></string>
    <string name="tv_reset">Reset password</string>
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="tv_reset_password">We need your registered email to sent you password reset instructions.</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_change_password">Change password</string>
    <string name="tv_welcome">Welcome</string>
    <string name="tv_enter_new_password">Enter new password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_name_of_the_entry">Enter the name of the entry</string>
    <string name="credentials">Credentials</string>
    <string name="enter_the_login">Enter the login</string>
    <string name="password">Password</string>
    <string name="enter_the_password">Password</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="add">Add</string>
    <string name="favorite_entries">Favorite entries</string>
</resources>
